# nuclex-wavpack

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  nuclex-wavpack (msvc-14.2).vcxproj  nuclex-wavpack (msvc-14.2).vcxproj.filters
